--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
 }
 
 #copyright {
+  font-size: 19px;
   position: fixed;
   bottom: 25px;
   left: 0;
@@ -65,6 +66,7 @@ body {
 }
 
 .links {
+  font-size: 19px;
   position: fixed;
   bottom: 0;
   left: 0;
