--- a/style.css
+++ b/style.css
@@ -1,75 +1,75 @@
 @import url('https://fonts.googleapis.com/css2?family=Macondo&display=swap');
 
-
 body {
-  height: 100%;
   margin: 0;
   font-family: 'Macondo', cursive;
+  color: #4F3B17;
 }
 
 #container {
   display: grid;
   grid-template-columns: 1fr 2fr;
   height: 100vh;
-
-  .left,
-  .right {
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    color: #4F3B17;
-  }
-
-  .left {
-    background-color: #e4bd73;
-    text-align: center;
-    padding: 2rem
-  }
-
-  .right {
-    background-image: url(pictures/background.png);
-    background-size: cover;
-  }
 }
 
-#attack-btn,
-#restart-btn {
+.left {
+  background-color: #e4bd73;
+  text-align: center;
+  padding: 2rem;
+  font-size: 20px;
+}
+
+.right {
+  background-image: url(pictures/background.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+#attack-btn, #restart-btn, #damage-input {
   background-color: #4F3B17;
   color: #f8f6f3;
   border: none;
-  font-size: 18px;
   border-radius: 8px;
-  cursor: pointer;
-  display: inline-block;
-  padding: 0.5rem;
-}
-
-#damage-input {
-  background-color: #4F3B17;
-  color: #f8f6f3;
-  border: none;
   font-size: 18px;
-  border-radius: 8px;
-  cursor: pointer;
-  display: inline-block;
   padding: 0.5rem;
+  cursor: pointer;
 }
 
 #copyright {
   font-size: 15px;
   position: fixed;
   bottom: 25px;
-  left: 0;
-  width: 100%;
-  text-align: left;
-  margin-left: 3%;
+  left: 3%;
 }
 
-.links {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  text-align: left;
-  margin-left: 15%;
+@media screen and (max-width: 768px) {
+  #container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; 
+  }
+
+  .left {
+    flex: 1;             
+    font-size: 16px;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+  }
+
+  .right {
+    flex: 1;             
+    background-position: center;
+    background-size: cover;
+  }
+
+   #attack-btn, #restart-btn, #damage-input {
+    font-size: 14px;          
+    padding: 0.3rem 0.5rem;   
+    width: 120px;            
+    margin: 0.5rem auto;       
+    display: block;            
+  }
 }
